# stem

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/stemcell/: Model.cpp  Model.h
src/stemcell/elements/: Element.cpp  Element.h
src/stemcell/limits/: Limit.cpp  Limit.h
